# Solar-System

./: CMakeLists.txt
assets/shaders/: basic.fs
src/: CMakeLists.txt  Shader.cpp  Shader.h  Solar System.h  main.cpp
universe/CelestalBody/: CelestalBody.cpp  CelestalBody.h
universe/Sphere/: Sphere.cpp  Sphere.h
